syntax = "proto3";

service URLShortener {
  rpc Shorten (ShortenRequest) returns (ShortenResponse);
  rpc Expand (ExpandRequest) returns (ExpandResponse);
}

message ShortenRequest { string url = 1; }
message ShortenResponse { string short_url = 1; }

message ExpandRequest { string short_url = 1; }
message ExpandResponse { string original_url = 1; }
